clusters/cl01tl/manifests/postiz/HTTPRoute-postiz-spotlight.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postiz-spotlight
  labels:
    app.kubernetes.io/instance: postiz
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postiz
    helm.sh/chart: postiz-5.0.1
  namespace: postiz
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "postiz-spotlight.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: postiz-spotlight
          namespace: postiz
          port: 8969
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
